# pmcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  QUALITY_REPORT.md  README.md  RELEASE.md  TOYOTA_WAY.md  codecov.yml  deny.toml  fix_imports.sh  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  fuzz.yml  quality-badges.yml  release.yml
benches/: client_server_operations.rs  client_server_operations.rs.bak  json_performance.rs  protocol_serialization.rs  protocol_serialization.rs.bak  simd_performance.rs  simple_test.rs  transport_performance.rs  transport_performance.rs.bak
docs/: protocol-compatibility.md
docs/advanced/: middleware-composition.md  migration-from-typescript.md  production-deployment.md  session-management.md
docs/todo/: 1.0-release-features.md  docs-update.md  pmat-recommendations.md  rust-mcp-sdk.md  v-0.3-features.md
examples/: 01_client_initialize.rs  02_server_basic.rs  03_client_tools.rs  04_server_resources.rs  05_client_resources.rs  06_server_prompts.rs  07_client_prompts.rs  08_logging.rs  09_authentication.rs  10_progress_notifications.rs  11_request_cancellation.rs  12_error_handling.rs  13_websocket_transport.rs  14_sampling_llm.rs  15_middleware.rs  16_oauth_server.rs  17_completable_prompts.rs  18_resource_watcher.rs  19_elicit_input.rs  20_oidc_discovery.rs  21_macro_tools.rs  21_macro_tools.rs.disabled  22_streamable_http_server_stateful.rs  23_streamable_http_server_stateless.rs  24_streamable_http_client.rs  README.md  client.rs  currency_demo.sh  currency_server.rs  currency_server_README.md  server.rs  streamable_http_demo.sh  test_currency_server.rs
examples/wasm/: Cargo.toml  README.md  build.sh  index.html
examples/wasm/src/: lib.rs
fuzz/: Cargo.toml  README.md  run-fuzz.sh
fuzz/fuzz_targets/: auth_flows.rs  jsonrpc_handling.rs  protocol_parsing.rs  transport_layer.rs
pmcp-macros/: Cargo.toml  README.md
pmcp-macros/src/: lib.rs  tool.rs  tool_router.rs  utils.rs
pmcp-macros/tests/: tool_router_tests.rs  tool_tests.rs
pmcp-macros/tests/ui/: tool_missing_description.rs  tool_missing_description.stderr
src/: error.rs  lib.rs
src/client/: auth.rs  mod.rs
src/client/transport/: mod.rs
src/error/: mod.rs  recovery.rs
src/server/: batch.rs  cancellation.rs  dynamic.rs  elicitation.rs  mod.rs  notification_debouncer.rs  resource_watcher.rs  roots.rs  streamable_http_server.rs  subscriptions.rs
src/server/auth/: middleware.rs  mod.rs  oauth2.rs
src/server/transport/: mod.rs  websocket.rs
src/shared/: batch.rs  context.rs  event_store.rs  http.rs  http_constants.rs  logging.rs  middleware.rs  mod.rs  protocol.rs  protocol_helpers.rs  reconnect.rs  runtime.rs  session.rs  sse.rs  sse_parser.rs  stdio.rs  streamable_http.rs  transport.rs  uri_template.rs  wasm_websocket.rs  websocket.rs
src/simd/: mod.rs
src/types/: auth.rs  capabilities.rs  completable.rs  elicitation.rs  jsonrpc.rs  mod.rs  protocol.rs
src/utils/: batching.rs  json_simd.rs  mod.rs  parallel_batch.rs  validation.rs
tests/: new_features.rs  notification_properties.proptest-regressions  notification_properties.rs  protocol_invariants.proptest-regressions  protocol_invariants.rs  server_subscriptions.rs  session_validation_tests.rs  sse_parser_tests.rs  state_machine_properties.proptest-regressions  state_machine_properties.rs  streamable_http_integration.rs  streamable_http_properties.proptest-regressions  streamable_http_properties.rs  streamable_http_server_tests.rs  streamable_http_spec_compliance.rs  streamable_http_unit_tests.rs  test_batch_requests.rs  test_cancellation.rs  test_roots.rs  test_websocket_server.rs  transport.rs  transport_isolation_properties.proptest-regressions  transport_isolation_properties.rs  transport_properties.rs  typescript_interop.rs
tests/integration/typescript-interop/: Dockerfile.rust  Dockerfile.test  docker-compose.yml  package-lock.json  package.json  run-tests.sh  test-client.js  test-server.js
