[package]
name = "pmcp"
version = "0.2.0"
edition = "2021"
authors = ["PAIML Team"]
description = "High-quality Rust SDK for Model Context Protocol (MCP) with full TypeScript SDK compatibility"
license = "MIT"
repository = "https://github.com/paiml/pmcp"
homepage = "https://github.com/paiml/pmcp"
documentation = "https://docs.rs/pmcp"
readme = "README.md"
keywords = ["mcp", "model-context", "sdk", "ai", "llm"]
categories = ["api-bindings", "asynchronous", "network-programming"]
rust-version = "1.80.0"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value", "preserve_order"] }
tokio = { version = "1.46", features = ["full"] }
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Transport dependencies
tokio-tungstenite = { version = "0.27", optional = true }
hyper = { version = "1.6", features = ["full"], optional = true }
hyper-util = { version = "0.1", features = ["full"], optional = true }
http-body-util = "0.1"
bytes = "1.10"
futures = "0.3"
pin-project = "1.1"

# Utility dependencies
url = "2.5"
uuid = { version = "1.17", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
lazy_static = "1.5"
indexmap = { version = "2.10", features = ["serde"] }
parking_lot = "0.12"
dashmap = "6.1"

# Validation
jsonschema = { version = "0.30", optional = true }
garde = { version = "0.20", optional = true }

[dev-dependencies]
# Testing
proptest = "1.7"
quickcheck = "1.0"
quickcheck_macros = "1.1"
rstest = "0.25"
mockall = "0.13"
pretty_assertions = "1.4"
test-case = "3.3"
criterion = { version = "0.7", features = ["html_reports"] }
insta = { version = "1.43", features = ["json", "redactions"] }

# For examples
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
dashmap = "6.1"  # Already in main deps but needed for examples

[features]
default = ["full"]
full = ["websocket", "http", "validation"]
websocket = ["dep:tokio-tungstenite"]
http = ["dep:hyper", "dep:hyper-util"]
validation = ["dep:jsonschema", "dep:garde"]

# Example features
authentication_example = []
cancellation_example = []
progress_example = []

# Performance optimizations
unstable = []
simd = []

[[bench]]
name = "simple_test"
harness = false

[[bench]]
name = "json_performance"
harness = false

[[bench]]
name = "protocol_serialization"
harness = false

[[bench]]
name = "transport_performance"
harness = false

[[bench]]
name = "client_server_operations"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[[example]]
name = "01_client_initialize"
path = "examples/01_client_initialize.rs"

[[example]]
name = "02_server_basic"
path = "examples/02_server_basic.rs"

[[example]]
name = "03_client_tools"
path = "examples/03_client_tools.rs"

[[example]]
name = "04_server_resources"
path = "examples/04_server_resources.rs"

[[example]]
name = "05_client_resources"
path = "examples/05_client_resources.rs"

[[example]]
name = "06_server_prompts"
path = "examples/06_server_prompts.rs"

[[example]]
name = "07_client_prompts"
path = "examples/07_client_prompts.rs"

[[example]]
name = "08_logging"
path = "examples/08_logging.rs"

[[example]]
name = "09_authentication"
path = "examples/09_authentication.rs"
required-features = ["authentication_example"]

[[example]]
name = "10_progress_notifications"
path = "examples/10_progress_notifications.rs"
required-features = ["progress_example"]

[[example]]
name = "11_request_cancellation"
path = "examples/11_request_cancellation.rs"
required-features = ["cancellation_example"]

[[example]]
name = "12_error_handling"
path = "examples/12_error_handling.rs"

[[example]]
name = "13_websocket_transport"
path = "examples/13_websocket_transport.rs"
required-features = ["websocket"]

[[example]]
name = "14_sampling_llm"
path = "examples/14_sampling_llm.rs"

[[example]]
name = "15_middleware"
path = "examples/15_middleware.rs"

[workspace]
members = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
