[package]
name = "pmcp"
version = "1.0.0"
edition = "2021"
authors = ["PAIML Team"]
description = "High-quality Rust SDK for Model Context Protocol (MCP) with full TypeScript SDK compatibility"
license = "MIT"
repository = "https://github.com/paiml/pmcp"
homepage = "https://github.com/paiml/pmcp"
documentation = "https://docs.rs/pmcp"
readme = "README.md"
keywords = ["mcp", "model-context", "sdk", "ai", "llm"]
categories = ["api-bindings", "asynchronous", "network-programming"]
rust-version = "1.82.0"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value", "preserve_order"] }
schemars = { version = "0.8", optional = true }
# pmcp-macros = { version = "0.1.0", path = "pmcp-macros", optional = true }
async-trait = "0.1"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"

# Utility dependencies (needed on all platforms)
url = "2.5"
uuid = { version = "1.17", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
lazy_static = "1.5"
urlencoding = "2.1"
indexmap = { version = "2.10", features = ["serde"] }
parking_lot = "0.12"
dashmap = "6.1"
bytes = "1.10"
futures = "0.3"
pin-project = "1.1"
http-body-util = "0.1"

# OAuth dependencies
sha2 = "0.10"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = false }
tokio-tungstenite = { version = "0.27", features = ["native-tls"], optional = true }
hyper = { version = "1.6", features = ["full"], optional = true }
hyper-util = { version = "0.1", features = ["full"], optional = true }
notify = { version = "6.1", optional = true }
glob-match = { version = "0.2", optional = true }

# Platform-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.46", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent", "BinaryType"] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

# Transport dependencies
tokio-tungstenite = { version = "0.27", optional = true }
hyper = { version = "1.6", features = ["full"], optional = true }
hyper-util = { version = "0.1", features = ["full"], optional = true }

# File watching dependencies
notify = { version = "6.1", optional = true }
glob-match = { version = "0.2", optional = true }

# Validation
jsonschema = { version = "0.30", optional = true }
garde = { version = "0.22", optional = true }

# SIMD support
rayon = { version = "1.10", optional = true }

[dev-dependencies]
# Testing
proptest = "1.7"
quickcheck = "1.0"
quickcheck_macros = "1.1"
rstest = "0.25"
mockall = "0.13"
pretty_assertions = "1.4"
test-case = "3.3"
criterion = { version = "0.7", features = ["html_reports"] }
insta = { version = "1.43", features = ["json", "redactions"] }

# For examples
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
dashmap = "6.1"  # Already in main deps but needed for examples

[features]
default = ["validation"]
full = ["websocket", "http", "validation", "resource-watcher", "rayon"]
websocket = ["dep:tokio-tungstenite"]
http = ["dep:hyper", "dep:hyper-util"]
validation = ["dep:jsonschema", "dep:garde"]
resource-watcher = ["dep:notify", "dep:glob-match"]
# macros = ["dep:pmcp-macros", "dep:schemars"]
wasm = ["getrandom/js", "websocket-wasm"]
websocket-wasm = []

# Example features
authentication_example = []
cancellation_example = []
progress_example = []

# Performance optimizations
unstable = []
simd = []
rayon = ["dep:rayon"]

# Testing support
test-helpers = []

[[bench]]
name = "simple_test"
harness = false

[[bench]]
name = "json_performance"
harness = false

[[bench]]
name = "protocol_serialization"
harness = false

[[bench]]
name = "transport_performance"
harness = false

[[bench]]
name = "client_server_operations"
harness = false

[[bench]]
name = "simd_performance"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[[example]]
name = "01_client_initialize"
path = "examples/01_client_initialize.rs"

[[example]]
name = "02_server_basic"
path = "examples/02_server_basic.rs"

[[example]]
name = "03_client_tools"
path = "examples/03_client_tools.rs"

[[example]]
name = "04_server_resources"
path = "examples/04_server_resources.rs"

[[example]]
name = "05_client_resources"
path = "examples/05_client_resources.rs"

[[example]]
name = "06_server_prompts"
path = "examples/06_server_prompts.rs"

[[example]]
name = "07_client_prompts"
path = "examples/07_client_prompts.rs"

[[example]]
name = "08_logging"
path = "examples/08_logging.rs"

[[example]]
name = "09_authentication"
path = "examples/09_authentication.rs"
required-features = ["authentication_example"]

[[example]]
name = "10_progress_notifications"
path = "examples/10_progress_notifications.rs"
required-features = ["progress_example"]

[[example]]
name = "11_request_cancellation"
path = "examples/11_request_cancellation.rs"
required-features = ["cancellation_example"]

[[example]]
name = "12_error_handling"
path = "examples/12_error_handling.rs"

[[example]]
name = "13_websocket_transport"
path = "examples/13_websocket_transport.rs"
required-features = ["websocket"]

[[example]]
name = "14_sampling_llm"
path = "examples/14_sampling_llm.rs"

[[example]]
name = "15_middleware"
path = "examples/15_middleware.rs"

[[example]]
name = "16_oauth_server"
path = "examples/16_oauth_server.rs"

[[example]]
name = "17_completable_prompts"
path = "examples/17_completable_prompts.rs"

[[example]]
name = "18_resource_watcher"
path = "examples/18_resource_watcher.rs"
required-features = ["resource-watcher"]

[[example]]
name = "19_elicit_input"
path = "examples/19_elicit_input.rs"

[[example]]
name = "20_oidc_discovery"
path = "examples/20_oidc_discovery.rs"

[[example]]
name = "21_macro_tools"
path = "examples/21_macro_tools.rs"
required-features = ["macros"]

[workspace]
members = ["pmcp-macros"]
exclude = ["fuzz"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
