[package]
name = "pmcp-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1.0"
bytes = "1.0"
arbitrary = { version = "1.3", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

[dependencies.pmcp]
path = ".."
default-features = false
features = []

[[bin]]
name = "protocol_parsing"
path = "fuzz_targets/protocol_parsing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "jsonrpc_handling"
path = "fuzz_targets/jsonrpc_handling.rs"
test = false
doc = false
bench = false

[[bin]]
name = "transport_layer"
path = "fuzz_targets/transport_layer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "auth_flows"
path = "fuzz_targets/auth_flows.rs"
test = false
doc = false
bench = false
